--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-  hello world!
+  <head>
+  <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    <div class="main1">
+      <h1> My Website </h1>
+      <p> Test </p>
+    </div>
+  </body>
 </html>
