--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <div class="main1">
-      <h1> My Website </h1>
-      <p> Test </p>
+      <h1> Who I am </h1>
+      <p> Hello, my name is Jack O'Grady, This is my website </p>
     </div>
   </body>
 </html>
