--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="main1">
+    <div class="Title">
       <h1> Who I am </h1>
+    </div>
+    <div class="Para1">
       <p> Hello, my name is Jack O'Grady, This is my website </p>
     </div>
   </body>
