--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="Title">
-      <h1> Who I am </h1>
+    <div class="Header">
+      <div class="Icon-Header"><a href="" target="_blank"><img src="./assets/boxes.png" alt="Noob"></a></div>
     </div>
-    <div class="Para1">
-      <p> Hello, my name is Jack O'Grady, This is my website </p>
+
+    <div class="Body">
+
+    </div>
+
+    <div class=Footer">
+
     </div>
   </body>
 </html>
