--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
+<!DOCTYPE html>
+
 <html>
   <head>
   <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div class="Header">
-      <div class="Icon-Header"><a href="" target="_blank"><img src="./assets/boxes.png" alt="Noob"></a></div>
+      <div class="Navbar">
+        <ul>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Projects">Projects</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="Body">
 
     </div>
 
-    <div class=Footer">
+    <div class="Footer">
 
     </div>
   </body>
