Added temporary Projects page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     </div>
 
     <div class="Body">
+      <h1> My Projects</h1>
+      <div class="Cap-Proj">
+        <a href="https://bzz7t.itch.io/capitalism-clicker-game/download/eyJpZCI6MTc1NzQwNiwiZXhwaXJlcyI6MTY3ODM4MDI0NX0%3d.bgnOUK9lQJfO%2fZ7uuCd3kH8JPMw%3d"><img src="./assets/Capitalism.png" alt="A Game about Capitalism"></a>
+        <h2>Capitalism</h5>
+        <p>A simple clicker game where you print 
+          money like the capitalist you are!
+          This was made by Myself and two other Classmates!</p>
+        <p>Want to play? Click the image above!</p>
+      </div>
 
     </div>
 
