--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="Header">
       <div class="Navbar">
         <ul>
-          <li><a href="#About">About</a></li>
+          <li><a href="#About">/f0492</a></li>
           <li><a href="#Projects">Projects</a></li>
         </ul>
       </div>
