Added about page

--- a/index.html
+++ b/index.html
@@ -2,27 +2,36 @@
 
 <html>
   <head>
-  <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="project.css">
   </head>
   <body>
     <div class="Header">
       <div class="Navbar">
         <ul>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Projects">Projects</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./index.html">Projects</a></li>
         </ul>
       </div>
     </div>
 
     <div class="Body">
       <h1> My Projects</h1>
-      <div class="Cap-Proj">
-        <a href="https://bzz7t.itch.io/capitalism-clicker-game/download/eyJpZCI6MTc1NzQwNiwiZXhwaXJlcyI6MTY3ODM4MDI0NX0%3d.bgnOUK9lQJfO%2fZ7uuCd3kH8JPMw%3d"><img src="./assets/Capitalism.png" alt="A Game about Capitalism"></a>
-        <h2>Capitalism</h5>
-        <p>A simple clicker game where you print 
-          money like the capitalist you are!
-          This was made by Myself and two other Classmates!</p>
-        <p>Want to play? Click the image above!</p>
+      <div class="splitscreen">
+        <div class="Cap-Proj">
+          <a href="https://bzz7t.itch.io/capitalism-clicker-game/download/eyJpZCI6MTc1NzQwNiwiZXhwaXJlcyI6MTY3ODM4MDI0NX0%3d.bgnOUK9lQJfO%2fZ7uuCd3kH8JPMw%3d"><img src="./assets/Capitalism.png" alt="A Game about Capitalism"></a>
+          <h2>Capitalism</h5>
+          <p>A simple clicker game where you print 
+            money like the capitalist you are!
+            This was made by Myself and two other Classmates!</p>
+          <p>Want to play? Click the image above!</p>
+        </div>
+        <div class="TKPY-PROJ">
+          <a href="https://github.com/RockArtist33/PyTK-Retail"><img src="./assets/Not-Decided.png" alt="A TK project focused around retail"></a>
+          <h2>Py TK Retail Project</h5>
+          <p>A Lab Project based around providing tools designed for use in retail</p>
+          <p>If you want the source code: Click the image!</p>
+        </div>
+        
       </div>
 
     </div>
